Fixed the chart box alignment and height a bit.

--- a/static/styles/base.css
+++ b/static/styles/base.css
@@ -271,6 +271,7 @@ ol.text li {
   min-width: 257px;
   margin-bottom: 16px;
   margin-right: 30px;
+  vertical-align: top;
 }
 
 .box_header {
